poker-planning/kustomization/overlays/ingress/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poker-planning-frontend
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: poker-planning-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
