poker-planning/kustomization/overlays/ingress/ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: poker-planning-server
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: poker-planning-server
            port:
              number: 8000
        path: /api
        pathType: Prefix
